Dark mode fixed

--- a/client/src/assets/app.css
+++ b/client/src/assets/app.css
@@ -26,7 +26,7 @@ body {
 .dark {
     background-color: #000000;
     font-family: 'Montserrat', sans-serif;
-    color: #c0c0c0;
+    color: #012ffa;
 }
 
 footer{
